refactor: replace hardcoded strings with i18n keys

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,4 +1,18 @@
 {
+  "helloUser": "Hello, {userName} 👋",
+  "helloUserAnonymous": "Hello, User 👋",
+  "hydrationProgress": "Hydration Progress",
+  "justDrank": "Just drank 💧",
+  "stepGoalProgress": "Walking Goal Progress",
+  "dailyDistance": "Daily Distance",
+  "dailyGoal": "Daily Goal",
+  "caloriesBurned": "Calories Burned",
+  "stepsToday": "Steps Today",
+  "nextGlassIn": "until next glass",
+  "activityPermissionButton": "Allow activity recognition",
+  "activityPermissionDenied": "Activity recognition permission denied.",
+  "goalReachedTitle": "Congratulations! 🎉",
+  "goalReachedBody": "You reached your goal of {km} km today!",
   "welcome": "Welcome to HidraFit",
   "googleSignInError": "Failed to authenticate with Google",
   "guestSignInError": "Failed to sign in as guest",
@@ -10,5 +24,25 @@
   "chooseLanguage": "Choose Language",
   "changeLanguage": "Change Language",
   "portuguese": "Português (Brazil)",
-  "english": "English (USA)"
+  "english": "English (USA)",
+  "settings": "Settings",
+  "hydrationReminder": "Hydration reminders",
+  "hydrationReminderDescription": "Receive notifications to drink water",
+  "goalCompletionNotification": "Goal completion notification",
+  "goalCompletionNotificationDescription": "Notify when the daily goal is reached",
+  "viewOnGithub": "View project on GitHub",
+  "logout": "Logout",
+  "deleteAccount": "Delete Account",
+  "errorLoggingOut": "Error logging out",
+  "errorOpeningLink": "Failed to open the link",
+  "profileTitle": "Profile",
+  "nameLabel": "Name",
+  "dailyGoalLabel": "Daily goal (km)",
+  "hydrationIntervalLabel": "Hydration interval (min)",
+  "saveButton": "Save",
+  "invalidName": "Enter a valid name.",
+  "invalidStepGoal": "Enter a valid goal in kilometers.",
+  "invalidHydrationInterval": "Enter a valid hydration interval (minutes).",
+  "profileSaved": "Profile saved successfully.",
+  "profileSaveError": "Error saving profile. Try again."
 }
