--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -1,14 +1,48 @@
 {
+  "helloUser": "Olá, {userName} 👋",
+  "helloUserAnonymous": "Olá, Usuário 👋",
+  "hydrationProgress": "Progresso de hidratação",
+  "justDrank": "Acabei de beber 💧",
+  "stepGoalProgress": "Progresso da meta de caminhada",
+  "dailyDistance": "Distância diária",
+  "dailyGoal": "Meta diária",
+  "caloriesBurned": "Calorias queimadas",
+  "stepsToday": "Passos hoje",
+  "nextGlassIn": "até o próximo copo",
+  "activityPermissionButton": "Permitir reconhecimento de atividade",
+  "activityPermissionDenied": "Permissão de reconhecimento de atividade negada.",
+  "goalReachedTitle": "Parabéns! 🎉",
+  "goalReachedBody": "Você atingiu sua meta de {km} km hoje!",
   "welcome": "Bem-vindo ao HidraFit",
-  "googleSignInError": "Erro ao autenticar com o Google",
-  "guestSignInError": "Erro ao entrar como convidado",
+  "googleSignInError": "Falha ao autenticar com o Google",
+  "guestSignInError": "Falha ao entrar como convidado",
   "continueWithGoogle": "Continuar com o Google",
   "signInAsGuest": "Entrar como Convidado",
-  "alreadyHaveAccount": "Já tem conta? Entrar",
-  "dontHaveAccountSignUp": "Não tem conta? Cadastre-se",
+  "alreadyHaveAccount": "Já tem uma conta? Entre",
+  "dontHaveAccountSignUp": "Não tem uma conta? Cadastre-se",
   "appTitle": "HidraFit",
-  "chooseLanguage": "Alterar Idioma",
+  "chooseLanguage": "Escolha o Idioma",
   "changeLanguage": "Mudar Idioma",
-  "portuguese": "Português (Brasil)",
-  "english": "Inglês (EUA)"
+  "settings": "Configurações",
+  "hydrationReminder": "Lembretes de hidratação",
+  "hydrationReminderDescription": "Receber notificações para beber água",
+  "goalCompletionNotification": "Notificação de meta atingida",
+  "goalCompletionNotificationDescription": "Avisar quando a meta diária for concluída",
+  "viewOnGithub": "Ver projeto no GitHub",
+  "logout": "Sair",
+  "deleteAccount": "Deletar Conta",
+  "english": "Inglês",
+  "portuguese": "Português",
+  "errorLoggingOut": "Erro ao sair",
+  "errorOpeningLink": "Não foi possível abrir o link",
+  "profileTitle": "Perfil",
+  "nameLabel": "Nome",
+  "dailyGoalLabel": "Meta diária (km)",
+  "hydrationIntervalLabel": "Intervalo entre copos de água (min)",
+  "saveButton": "Salvar",
+  "invalidName": "Digite um nome válido.",
+  "invalidStepGoal": "Digite uma meta válida em quilômetros.",
+  "invalidHydrationInterval": "Digite um intervalo válido para hidratação (minutos).",
+  "profileSaved": "Perfil salvo com sucesso.",
+  "profileSaveError": "Erro ao salvar perfil. Tente novamente."
 }
